kubernetes/code/eoin-app-server/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: eoin-app-server
  name: eoin-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: eoin-app-server
status:
  loadBalancer: {}
