kubernetes/code/eoin-app-server/eoin-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: eoin-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: eoin-app
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
